Fixed unfolding bug on Firefox

--- a/styles/main.css
+++ b/styles/main.css
@@ -235,6 +235,8 @@ Cube
 .cube {
     cursor: pointer;
     z-index: 1;
+    -webkit-transform-style: preserve-3d;
+    transform-style: preserve-3d;
 }
 
 .face {
